# RustAvrBlink

./: .gitmodules  Cargo.toml  attiny25.json  avr-attiny25.json  link.example  link.ld
.cargo/: config.toml
src/: build.rs  lib.rs  main.rs
