[package]
name = "TempLoggerRust"
version = "0.1.0"
authors = ["Florian Dopona <dopoflor@gmail.com"]
edition = '2018'
build = "build.rs"

[dependencies]
ruduino = {  git = "https://github.com/avr-rust/ruduino", branch = "master" }
#avrd = "1.0.0"

#avr-libc = { version = "0.2.2" }

[profile.release]
lto = true
